--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -40,6 +40,11 @@
     {% endif %}
     <!-- {% if post.date %}<p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ post.date | date: '%B %d, %Y' }}</p>{% endif %} -->
     {% if post.venue %}<p class="archive__item-excerpt" itemprop="description">{{post.type}}, {{ post.venue }},  {{post.location}} {% endif %}
-    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>{% endif %}
+    <!-- {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>{% endif %} -->
+    {% if post.content %}
+      <div class="archive__item-content" itemprop="text">
+        {{ post.content | markdownify }}
+      </div>
+    {% endif %}    
   </article>
 </div>
