--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -18,7 +18,7 @@
     text-decoration: underline;
 
     &:hover {
-      text-decoration: underline;
+      text-decoration: none; // Changed this line to remove underline on hover
 
       img {
         box-shadow: 0 0 10px rgba(#000, 0.25);
@@ -80,7 +80,7 @@
   }
 
   .archive__item-title {
-    text-decoration: underline;
+    text-decoration: none; // Changed this line to remove underline on hover
   }
 }
 
