--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,8 +12,9 @@
   {% assign title = post.title %}
 {% endif %}
 
-<div class="{{ include.type | default: "list" }}__item">
-  <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
+<!-- <div class="{{ include.type | default: "list" }}__item"> -->
+<div id="publication-{{ post.slug }}" class="{{ include.type | default: "list" }}__item">
+    <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
         <img src=
