trying to fix about button error

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,3 +1,5 @@
+/* _custom.scss */
+
 /* Custom styles for the About page button */
 .btn-icon {
     display: inline-flex;
@@ -14,7 +16,7 @@
   }
   
   .icon-image {
-    width: 4px;
-    height: 4px;
+    width: 24px;
+    height: 24px;
     margin-right: 8px;
   }
