trying to fix button

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,7 +4,7 @@
 .btn-icon {
     display: inline-flex;
     align-items: center;
-    background-color: #007bff;
+    background-color: #007bff00;
     padding: 10px 15px;
     border-radius: 5px;
     text-decoration: none;
@@ -12,11 +12,11 @@
   }
   
   .btn-icon:hover {
-    background-color: #0056b3;
+    background-color: #0057b309;
   }
   
   .icon-image {
-    width: 24px;
-    height: 24px;
+    width: 10px;
+    height: 10px;
     margin-right: 8px;
   }
