--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,22 +1,18 @@
-/* _custom.scss */
-
 /* Custom styles for the About page button */
 .btn-icon {
-    display: inline-flex;
-    align-items: center;
-    background-color: #007bff00;
-    padding: 10px 15px;
-    border-radius: 5px;
-    text-decoration: none;
-    color: white;
-  }
-  
-  .btn-icon:hover {
-    background-color: #0057b309;
-  }
-  
-  .icon-image {
-    width: 10px;
-    height: 10px;
-    margin-right: 8px;
-  }
+  display: inline-flex;
+  align-items: center;
+  background-color: #000; /* Black background color */
+  color: white; /* White text color */
+  padding: 10px 20px; /* Adjust padding for the button */
+  border-radius: 25px; /* Rounded corners */
+  text-decoration: none; /* Remove underline */
+  font-size: 16px; /* Font size */
+  font-weight: bold; /* Bold text */
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.btn-icon:hover {
+  background-color: #333; /* Slightly lighter black on hover */
+  color: white; /* Keep text white on hover */
+}
