--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,12 +1,13 @@
 /* Custom styles for the About page button */
 .center-button {
-  text-align: center; /* Center the content horizontally */
-  margin: 20px 0;     /* Optional: add some margin above and below */
+  display: flex;
+  justify-content: center; /* Center the button horizontally */
+  margin: 20px 0; /* Optional: add some margin above and below */
 }
 
 .btn-icon {
   display: inline-block;
-  background-color: #333; /* Dark gray background color */
+  background-color: #555; /* Dark gray background color */
   color: white; /* White text color */
   padding: 10px 20px; /* Adjust padding for the button */
   border-radius: 25px; /* Rounded corners */
@@ -17,7 +18,7 @@
 }
 
 .btn-icon:hover {
-  background-color: #555; /* Slightly lighter dark gray on hover */
+  background-color: #777; /* Slightly lighter dark gray on hover */
   color: white; /* Keep text white on hover */
   text-decoration: none !important; /* Ensure underline is not added on hover */
 }
