--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -67,7 +67,7 @@
 // }
 
 .masonry-gallery {
-  column-count: 3;
+  // column-count: 3;
   column-gap: 10px;
   margin-bottom: 50px; /* Adds space between different galleries */
 }
